fixed slider items on mobile view

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -128,3 +128,8 @@ flex-direction:column;
  body.collection .card__heading{
   font-size: 16px;
  }
+ @media (max-width:480px) {
+  slider-component .grid__item{
+    width:95%;
+  }
+ }
